# audiobook-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
audiobook_mcp/: server.py
audiobook_mcp/db/: connection.py  schema.py
audiobook_mcp/tools/: audio.py  characters.py  projects.py  tts.py  voice_samples.py
audiobook_mcp/utils/: ffmpeg.py
docs/: adding-engines.md  audio-features.md  installation.md  tools-reference.md
docs/engines/: analysis.md  songgen.md  transcription.md  tts.md
talky_talky/: __init__.py  server.py
talky_talky/db/: schema.py
talky_talky/server/: __init__.py  app.py  config.py
talky_talky/server/tools/: __init__.py  analysis.py  assets.py  audio.py  discovery.py  resources.py  songgen.py  transcription.py  tts.py  workflows.py
talky_talky/tools/: __init__.py  audio.py  autotune.py  characters.py  import_tools.py  music_theory.py  pitch_detection.py  tts.py
talky_talky/tools/analysis/: __init__.py  base.py  emotion2vec.py  nisqa.py  resemblyzer.py  sfx.py
talky_talky/tools/assets/: __init__.py  autotag.py  base.py  database.py  freesound.py  jamendo.py  local.py
talky_talky/tools/audio/: __init__.py  design.py  modulation.py  trimming.py  types.py  utilities.py
talky_talky/tools/songgen/: __init__.py  acestep.py  base.py  levo.py
talky_talky/tools/transcription/: __init__.py  base.py
talky_talky/tools/tts/: __init__.py  base.py  chatterbox.py  chatterbox_turbo.py  cosyvoice.py  kokoro.py  maya1.py  mira.py  seamlessm4t.py  soprano.py  utils.py  vibevoice.py  xtts.py
talky_talky/utils/: __init__.py  ffmpeg.py  parser.py
talky_talky/utils/ffmpeg/: __init__.py  concat.py  core.py  format.py  manipulation.py
tests/: __init__.py  conftest.py  test_characters.py  test_job_queue.py  test_projects.py  test_validation.py
